# intro-to-wasm-in-rust

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build  build.sh  index.html  main.css
1/: build  index.html
1-add/: build.sh  index.html  main.js
1-simple/: index.html  main.js
2/: index.html
2-add-and-log/: add_and_log.wat  build.sh  index.html  main.js
2-imported-func/: build  index.html  main.js
3/: Cargo.toml  build  index.html
3-add-rust/: index.html  main.js
3/src/: lib.rs
4/: index.html
4-hello-world/: Cargo.toml  index.html  main.js
5/: Cargo.toml  index.html
5-dom/: Cargo.toml  index.html
5-dom/src/: lib.rs
5-memory/: Cargo.toml  build.sh  index.html  main.js
5/src/: lib.rs
6-dom/: index.html  main.js
6-memory/: Cargo.toml  index.html
6-memory/src/: lib.rs  utils.rs
